add nav and hero section

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="#" class="navbar__logo">
-            <img src="./assets/logos/Logo-bandsite.svg" alt="bandsite logo">
-        </a>
+        <div class="navbar__logo">
+            <a href="#">
+                <img class="navbar__logo--icon" src="./assets/logos/Logo-bandsite.svg" alt="bandsite logo">
+            </a>
+        </div>
         <div class="navbar__menu">
-            <a href="#" class="navbar__menu--links">Biography</a>
+            <a href="#" class="navbar__menu--links active">Biography</a>
             <a href="#" class="navbar__menu--links">Shows</a>
         </div>
     </nav>
