add about content

--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
     <!-- Hero Section -->
     <div class="hero">
         <div class="hero__container">
-            <h1>The Bees Knees</h1>
+            <h1 class="hero__container--title">The Bees Knees</h1>
+        </div>
+    </div>
+
+    <!-- About Section -->
+    <div class="about">
+        <h3>About the Musicians</h3>
+        <div class="about__image">
+            <img src="./assets/images/band.jpg" alt="band">
+        </div>
+        <div class="quote">
+            <p>“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
+            <p class="quote__singer"> - Lead vocalist of The Bees Knees</p>
         </div>
     </div>
 </body>
