revise div structure for better responsiveness

--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
     </div>
 
     <!-- About Section -->
-    <section class="about-container">
+    <section class="about">
     <h3 class="section-header">About the Musicians</h3>
         <div class="about__image">
-            <img src="./assets/images/band.jpg" alt="band">
+            <img class="about__image--small" src="./assets/images/band.jpg" alt="band">
         </div>
-        <div class="about__quote">
+        <div>
             <p class="subheader">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
-            <p class="about__quote--source"> - Lead vocalist of The Bees Knees</p>
+            <p class="subcopy"> - Lead vocalist of The Bees Knees</p>
         </div>
         <div class="about__copy">
         <h4 class="subheader">The Bees Knees</h4>
             <div class="about__paragraphs">
-                <p>The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well known record label.</p>
+                <p class="about__paragraphs--copy">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well known record label.</p>
             </div>
             <div class="about__paragraphs">
-                <p>From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.</p>
+                <p class="about__paragraphs--copy">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.</p>
             </div>
         </div>
     </section>
-    <section class="photo-gallery">
+    <!-- <section class="photo-gallery">
         <h3 class="section-header">Photo Gallery</h3>
             <div class="photo-gallery__container">
                 <div class="photo-gallery__container--images">
@@ -62,7 +62,7 @@
                     <img src="./assets/images/Photo-gallery-4.jpg" alt="club4">
                 </div>
                 <div class="photo-gallery__container--images">
-                    <img src="./assets/images/Photo-gallery-5.jpg" alt="club5">
+                    <img class="photo-gallery-image" src="./assets/images/Photo-gallery-5.jpg" alt="club5">
                 </div>
                 <div class="photo-gallery__container--images">
                     <img src="./assets/images/Photo-gallery-6.jpg" alt="club6">
@@ -77,12 +77,6 @@
                     <img src="./assets/images/Photo-gallery-9.jpg" alt="club9">
                 </div>
             </div>
-    </section>
-    <footer>
-        
-    </footer>
-
-
-    </div>
+    </section> -->
 </body>
 </html>
