add photo gallery

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <!-- About Section -->
     <section class="about">
     <h3 class="section-header">About the Musicians</h3>
+    <div class="about__container">
         <div class="about__image">
             <img class="about__image--small" src="./assets/images/band.jpg" alt="band">
         </div>
@@ -45,38 +46,39 @@
                 <p class="about__paragraphs--copy">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.</p>
             </div>
         </div>
+    </div>
     </section>
-    <!-- <section class="photo-gallery">
+    <section class="photo-gallery">
         <h3 class="section-header">Photo Gallery</h3>
             <div class="photo-gallery__container">
-                <div class="photo-gallery__container--images">
-                    <img src="./assets/images/Photo-gallery-1.jpg" alt="club1">
+                <div class="photo-gallery__item">
+                    <img class="photo-gallery__image" src="./assets/images/Photo-gallery-1.jpg" alt="club1">
                 </div>
-                <div class="photo-gallery__container--images">
-                    <img src="./assets/images/Photo-gallery-2.jpg" alt="club2">
+                <div class="photo-gallery__item">
+                    <img class="photo-gallery__image" src="./assets/images/Photo-gallery-2.jpg" alt="club2">
                 </div>
-                <div class="photo-gallery__container--images">
-                    <img src="./assets/images/Photo-gallery-3.jpg" alt="club3">
+                <div class="photo-gallery__item">
+                    <img class="photo-gallery__image" src="./assets/images/Photo-gallery-3.jpg" alt="club3">
                 </div>
-                <div class="photo-gallery__container--images">
-                    <img src="./assets/images/Photo-gallery-4.jpg" alt="club4">
+                <div class="photo-gallery__item">
+                    <img class="photo-gallery__image" src="./assets/images/Photo-gallery-4.jpg" alt="club4">
                 </div>
-                <div class="photo-gallery__container--images">
-                    <img class="photo-gallery-image" src="./assets/images/Photo-gallery-5.jpg" alt="club5">
+                <div class="photo-gallery__item">
+                    <img class="photo-gallery__image" src="./assets/images/Photo-gallery-5.jpg" alt="club5">
                 </div>
-                <div class="photo-gallery__container--images">
-                    <img src="./assets/images/Photo-gallery-6.jpg" alt="club6">
+                <div class="photo-gallery__item">
+                    <img class="photo-gallery__image" src="./assets/images/Photo-gallery-6.jpg" alt="club6">
                 </div>
-                <div class="photo-gallery__container--images">
-                    <img src="./assets/images/Photo-gallery-7.jpg" alt="club7">
+                <div class="photo-gallery__item">
+                    <img class="photo-gallery__image" src="./assets/images/Photo-gallery-7.jpg" alt="club7">
                 </div>
-                <div class="photo-gallery__container--images">
-                    <img src="./assets/images/Photo-gallery-8.jpg" alt="club8">
+                <div class="photo-gallery__item">
+                    <img class="photo-gallery__image" src="./assets/images/Photo-gallery-8.jpg" alt="club8">
                 </div>
-                <div class="photo-gallery__container--images">
-                    <img src="./assets/images/Photo-gallery-9.jpg" alt="club9">
+                <div class="photo-gallery__item">
+                    <img class="photo-gallery__image" src="./assets/images/Photo-gallery-9.jpg" alt="club9">
                 </div>
             </div>
-    </section> -->
+    </section>
 </body>
 </html>
