--- a/index.html
+++ b/index.html
@@ -81,4 +81,45 @@
             </div>
     </section>
 </body>
+<footer class="footer">
+    <div class="footer__menu">
+        <div class="footer__contact">
+            <h3 class="footer__header">Get in Touch</h3>   
+            <div class="footer__social">
+                <div class="footer__social-icons">
+                    <a href="#"><img class="footer__icon" src="./assets/icons/Icon-instagram.svg" alt="instagram icon">
+                    </a>
+                </div>
+                <div class="footer__social--icons">
+                    <a href="#"><img class="footer__icon" src="./assets/icons/Icon-facebook.svg" alt="facebook icon">
+                    </a>
+                </div>
+                <div class="footer__social-icons">
+                    <a href="#"><img class="footer__icon" src="./assets/icons/Icon-twitter.svg" alt="twitter icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__management">
+            <div class="footer__locations">
+                <p class="footer__copy">The Bees Knees Management</p>
+                <p class="footer__copy">503 Broadway Penthouse,<br>New York, NY 10012, USA</p>
+                <a href="mailto:info@thebeesknees.com" class="footer__copy">info@thebeesknees.com</a>
+            </div>
+            <div class="footer__locations">
+                <p class="footer__copy">Limitless Artist Group</p>
+                <p class="footer__copy">Booking Agent for<br>US / South America / Japan</p>
+                <a href="mailto:bookings@limitlessag.com" class="footer__copy">bookings@limitlessag.com</a>
+            </div>
+            <div class="footer__locations">
+                <p class="footer__copy">ARCH Entertainment</p>
+                <p class="footer__copy">Booking Agent for<br>UK / EU / AU</p>
+                <a href="mailto:bookings@archentertainment.com" class="footer__copy">bookings@archentertainment.com</a>
+            </div>
+        </div>
+        <div class="footer__copyright">
+            <p class="footer__copy">Copyright The Bees Knees © 2023 All Rights Reserved</p>
+        </div>
+    </div>
+</footer>
 </html>
