--- a/index.html
+++ b/index.html
@@ -22,34 +22,36 @@
     </nav>
     <div class="hero">
         <div class="hero__container">
-            <h1 class="page-header">The Bees Knees</h1>
+            <page-header>The Bees Knees</page-header>
         </div>
     </div>
 
     <!-- About Section -->
     <section class="about">
-    <h3 class="section-header">About the Musicians</h3>
-    <div class="about__container">
+        <section-header>About the Musicians</section-header>
+        <div class="about__container">
         <div class="about__image">
             <img class="about__image--small" src="./assets/images/band.jpg" alt="band">
         </div>
-        <div>
-            <p class="subheader">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
-            <p class="subcopy"> - Lead vocalist of The Bees Knees</p>
+        <div class="about__quote">
+            <sub-header>“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</sub-header>
+            <p> - Lead vocalist of The Bees Knees</p>
         </div>
-        <div class="about__copy">
-        <h4 class="subheader">The Bees Knees</h4>
+        <!-- <div class="about__copy"> -->
+        <sub-header>The Bees Knees</sub-header>
             <div class="about__paragraphs">
-                <p class="about__paragraphs--copy">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well known record label.</p>
-            </div>
-            <div class="about__paragraphs">
-                <p class="about__paragraphs--copy">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.</p>
+                <div class="about__text">
+                    <p>The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well known record label.</p>
+                </div>
+                <div class="about__text">
+                    <p>From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.</p>
+                </div>
             </div>
         </div>
     </div>
     </section>
     <section class="photo-gallery">
-        <h3 class="section-header">Photo Gallery</h3>
+        <section-header>Photo Gallery</section-header>
             <div class="photo-gallery__container">
                 <div class="photo-gallery__item">
                     <img class="photo-gallery__image" src="./assets/images/Photo-gallery-1.jpg" alt="club1">
@@ -80,8 +82,39 @@
                 </div>
             </div>
     </section>
-</body>
-<footer class="footer">
+    <section class="join-conversation">
+    <section-header>Join the Conversation</section-header>
+    
+
+        <form class="comment-form">
+            <p>NAME</p>
+            <input type="text" placeholder="Enter your name" name="name" />
+            <p>COMMENT</p>
+            <textarea placeholder="Add a new comment" name="review"></textarea>
+            <button type="submit" class="comment-form__button">COMMENT</button>
+        </form>
+    <div class="comments">
+        <ul class="comment-list"></ul>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </section>
+<section class="footer">
     <div class="footer__menu">
         <div class="footer__contact">
             <h3 class="footer__header">Get in Touch</h3>   
@@ -121,5 +154,7 @@
             <p class="footer__copy">Copyright The Bees Knees © 2023 All Rights Reserved</p>
         </div>
     </div>
-</footer>
+</section>
+<script src="./scripts/index-page.js"></script>
+</body>
 </html>
