--- a/index.html
+++ b/index.html
@@ -84,35 +84,19 @@
     </section>
     <section class="join-conversation">
     <section-header>Join the Conversation</section-header>
-    
 
+    <div class="form-container">
         <form class="comment-form">
             <p>NAME</p>
             <input type="text" placeholder="Enter your name" name="name" />
             <p>COMMENT</p>
-            <textarea placeholder="Add a new comment" name="review"></textarea>
+            <input type="review" placeholder="Add a new comment" name="review" />
             <button type="submit" class="comment-form__button">COMMENT</button>
         </form>
+    </div>
     <div class="comments">
         <ul class="comment-list"></ul>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </section>
 <section class="footer">
     <div class="footer__menu">
