updated nav link to shows page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="navbar__items">
                 <a href="#" class="navbar__link active">Biography</a>
-                <a href="#" class="navbar__link">Shows</a>
+                <a href="./pages/shows.html" class="navbar__link">Shows</a>
             </div>
         </div>
     </nav>
