--- a/pages/shows.html
+++ b/pages/shows.html
@@ -23,12 +23,14 @@
     <div class="shows-hero">
         <div class="shows-hero__container">
             <div class="shows-hero__subheader">
-                <sub-header>Beasts Album</sub-header>
+                <sub-header class="shows-subheader">Beasts Album</sub-header>
             </div>
         <div>
             <page-header>Stripes of Yellow x For The Stings</page-header>
         </div>
-        </div>
+        <div><iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1721453436&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/emcee-botttt" title="Emcee Botttt" target="_blank" style="color: #cccccc; text-decoration: none;">Emcee Botttt</a> · <a href="https://soundcloud.com/emcee-botttt/the-parrot-has-no-head" title="The Parrot Has No Head" target="_blank" style="color: #cccccc; text-decoration: none;">The Parrot Has No Head</a></div>
+    </div>
+    </div>
     </div>
 
 <section>
