improve styling to match mockup

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <nav class="navbar">
         <div class="navbar__menu">
             <div class="navbar__logo">
-                <a href="#">
+                <a href="/index.html">
                 <img class="navbar__logo--icon" src="./assets/logos/Logo-bandsite.svg" alt="bandsite logo">
                 </a>
             </div>
             <div class="navbar__items">
-                <a href="#" class="navbar__link active">Biography</a>
+                <a href="./index.html" class="navbar__link active">Biography</a>
                 <a href="./pages/shows.html" class="navbar__link">Shows</a>
             </div>
         </div>
