improve styling to match mockup

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -15,22 +15,26 @@
                 </a>
             </div>
             <div class="navbar__items">
-                <a href="../index.html" class="navbar__link active">Biography</a>
-                <a href="#" class="navbar__link">Shows</a>
+                <a href="../index.html" class="navbar__link">Biography</a>
+                <a href="./shows.html" class="navbar__link active">Shows</a>
             </div>
         </div>
     </nav>
     <div class="shows-hero">
         <div class="shows-hero__container">
-            <div class="shows-hero__subheader">
-                <sub-header class="shows-subheader">Beasts Album</sub-header>
+            <!-- <div class="shows-hero__subheader"> -->
+                <sub-header class="shows-hero__subheader">Beasts Album</sub-header>
+            <!-- </div>
+        <div> -->
+                <page-header>Stripes of Yellow x For The Stings</page-header>
+        <!-- </div> -->
+            <div>
+                <iframe width="70%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1721453436&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+
+                <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/emcee-botttt" title="Emcee Botttt" target="_blank" style="color: #cccccc; text-decoration: none;">Emcee Botttt</a> · <a href="https://soundcloud.com/emcee-botttt/the-parrot-has-no-head" title="The Parrot Has No Head" target="_blank" style="color: #cccccc; text-decoration: none;">The Parrot Has No Head</a>
+                </div>
             </div>
-        <div>
-            <page-header>Stripes of Yellow x For The Stings</page-header>
         </div>
-        <div><iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1721453436&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/emcee-botttt" title="Emcee Botttt" target="_blank" style="color: #cccccc; text-decoration: none;">Emcee Botttt</a> · <a href="https://soundcloud.com/emcee-botttt/the-parrot-has-no-head" title="The Parrot Has No Head" target="_blank" style="color: #cccccc; text-decoration: none;">The Parrot Has No Head</a></div>
-    </div>
-    </div>
     </div>
 
 <section>
