add the axios script and band-site-api script above </body> and comment out index-page.js script

--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
         </div>
         <div class="about__quote">
             <sub-header>“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</sub-header>
-            <p> - Lead vocalist of The Bees Knees</p>
+            <p class="quote-author"> - Lead vocalist of The Bees Knees</p>
         </div>
-        <!-- <div class="about__copy"> -->
         <sub-header>The Bees Knees</sub-header>
             <div class="about__paragraphs">
                 <div class="about__text">
@@ -139,6 +138,8 @@
         </div>
     </div>
 </section>
-<script src="./scripts/index-page.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<!-- <script src="./scripts/index-page.js"></script> -->
+<script src="./scripts/band-site-api.js"></script>
 </body>
 </html>
