--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/bio.css" />
 </head>
 <body>
+<main>
     <nav class="navbar">
         <div class="navbar__menu">
             <div class="navbar__logo">
@@ -81,12 +82,12 @@
                 </div>
             </div>
     </section>
-    <section class="join-conversation">
-    <section-header>Join the Conversation</section-header>
 
+    <section-header>Join the Conversation</section-header>
+    <section class="comment-section">
     <div class="form-container">
         <form class="comment-form">
-            <label for="commentName" class="comment-form__title">
+            <label for="commentName" class="comment-form__label">
                 NAME
             </label>
             <input
@@ -95,16 +96,18 @@
                 placeholder="Enter your name"
                 name="commentName"
             />
-            <!-- <label for="commentReview" class="comment-form__title">
+            <label for="commentReview" class="comment-form__label">
                 COMMENT
-            </label> -->
+            </label>
             <textarea
             class="comment-form__textarea"
             type="review"
             placeholder="Add a new comment"
             name="commentReview"
             ></textarea>
+        <div>
             <button class="comment-form__button" type="submit">COMMENT</button>
+        </div>
         </form>
     </div>
     <div class="comments">
@@ -152,6 +155,7 @@
         </div>
     </div>
 </section>
+</main>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <!-- <script src="./scripts/index-page.js"></script> -->
 <script src="./scripts/band-site-api.js"></script>
