update footer and script source

--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
             <page-header>The Bees Knees</page-header>
         </div>
     </div>
-
-    <!-- About Section -->
     <section class="about">
         <section-header>About the Musicians</section-header>
         <div class="about__container">
@@ -120,15 +118,15 @@
             <h3 class="footer__header">Get in Touch</h3>   
             <div class="footer__social">
                 <div class="footer__social-icons">
-                    <a href="#"><img class="footer__icon" src="./assets/icons/Icon-instagram.svg" alt="instagram icon">
+                    <a href="https://instagram.com/"><img class="footer__icon" src="./assets/icons/Icon-instagram.svg" alt="instagram icon">
                     </a>
                 </div>
                 <div class="footer__social--icons">
-                    <a href="#"><img class="footer__icon" src="./assets/icons/Icon-facebook.svg" alt="facebook icon">
+                    <a href="https://facebook.com/"><img class="footer__icon" src="./assets/icons/Icon-facebook.svg" alt="facebook icon">
                     </a>
                 </div>
                 <div class="footer__social-icons">
-                    <a href="#"><img class="footer__icon" src="./assets/icons/Icon-twitter.svg" alt="twitter icon">
+                    <a href="https://twitter.com/?lang=en"><img class="footer__icon" src="./assets/icons/Icon-twitter.svg" alt="twitter icon">
                     </a>
                 </div>
             </div>
@@ -157,7 +155,6 @@
 </section>
 </main>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<!-- <script src="./scripts/index-page.js"></script> -->
 <script src="./scripts/band-site-api.js"></script>
 </body>
 </html>
