--- a/pages/shows.html
+++ b/pages/shows.html
@@ -1,105 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bandsite</title>
     <link rel="stylesheet" href="../styles/shows.css" />
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar">
-        <div class="navbar__menu">
-            <div class="navbar__logo">
-                <a href="../index.html">
-                <img class="navbar__logo--icon" src="../assets/logos/Logo-bandsite.svg" alt="bandsite logo">
-                </a>
-            </div>
-            <div class="navbar__items">
-                <a href="../index.html" class="navbar__link">Biography</a>
-                <a href="./shows.html" class="navbar__link active">Shows</a>
-            </div>
+      <div class="navbar__menu">
+        <div class="navbar__logo">
+          <a href="../index.html">
+            <img
+              class="navbar__logo--icon"
+              src="../assets/logos/Logo-bandsite.svg"
+              alt="bandsite logo"
+            />
+          </a>
         </div>
+        <div class="navbar__items">
+          <a href="../index.html" class="navbar__link">Biography</a>
+          <a href="./shows.html" class="navbar__link active">Shows</a>
+        </div>
+      </div>
     </nav>
     <div class="shows-hero">
-        <div class="shows-hero__container">
-            <!-- <div class="shows-hero__subheader"> -->
-                <sub-header class="shows-hero__subheader">Beasts Album</sub-header>
-            <!-- </div>
-        <div> -->
-                <page-header>Stripes of Yellow x For The Stings</page-header>
-        <!-- </div> -->
-            <div>
-                <iframe width="70%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1721453436&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+      <div class="shows-hero__container">
+        <sub-header class="shows-subheader">Beautiful Beasts Album</sub-header>
 
-                <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/emcee-botttt" title="Emcee Botttt" target="_blank" style="color: #cccccc; text-decoration: none;">Emcee Botttt</a> · <a href="https://soundcloud.com/emcee-botttt/the-parrot-has-no-head" title="The Parrot Has No Head" target="_blank" style="color: #cccccc; text-decoration: none;">The Parrot Has No Head</a>
-                </div>
-            </div>
+        <page-header>Stripes of Yellow x For The Stings</page-header>
+        <div class="iframe">
+          <iframe
+            width="70%"
+            height="100"
+            scrolling="no"
+            frameborder="no"
+            allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1721453436&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
+          ></iframe>
+
+          <div
+            style="
+              font-size: 10px;
+              color: #cccccc;
+              line-break: anywhere;
+              word-break: normal;
+              overflow: hidden;
+              white-space: nowrap;
+              text-overflow: ellipsis;
+              font-family: Interstate, Lucida Grande, Lucida Sans Unicode,
+                Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+              font-weight: 100;
+            "
+          >
+            <a
+              href="https://soundcloud.com/emcee-botttt"
+              title="Emcee Botttt"
+              target="_blank"
+              style="color: #cccccc; text-decoration: none"
+              >Emcee Botttt</a
+            >
+            ·
+            <a
+              href="https://soundcloud.com/emcee-botttt/the-parrot-has-no-head"
+              title="The Parrot Has No Head"
+              target="_blank"
+              style="color: #cccccc; text-decoration: none"
+              >The Parrot Has No Head</a
+            >
+          </div>
         </div>
+      </div>
     </div>
 
-<section>
-    <div class="shows-section">
-<section-header>Shows</section-header>
-<table id="shows-table">
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Venue</th>
-        <th>Location</th>
-        <th></th>
-        </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-</section>
+    <section class="shows">
+      <div class="shows-section">
+        <section-header id="shows-section-header">Shows</section-header>
+        <table id="shows-table">
+          <tbody></tbody>
+        </table>
+      </div>
+    </section>
 
-
-
-
-
-<section class="footer">
-
-    <div class="footer__menu">
+    <section class="footer">
+      <div class="footer__menu">
         <div class="footer__contact">
-            <h3 class="footer__header">Get in Touch</h3>   
-            <div class="footer__social">
-                <div class="footer__social-icons">
-                    <a href="#"><img class="footer__icon" src="../assets/icons/Icon-instagram.svg" alt="instagram icon">
-                    </a>
-                </div>
-                <div class="footer__social--icons">
-                    <a href="#"><img class="footer__icon" src="../assets/icons/Icon-facebook.svg" alt="facebook icon">
-                    </a>
-                </div>
-                <div class="footer__social-icons">
-                    <a href="#"><img class="footer__icon" src="../assets/icons/Icon-twitter.svg" alt="twitter icon">
-                    </a>
-                </div>
+          <h3 class="footer__header">Get in Touch</h3>
+          <div class="footer__social">
+            <div class="footer__social-icons">
+              <a href="https://instagram.com"
+                ><img
+                  class="footer__icon"
+                  src="../assets/icons/Icon-instagram.svg"
+                  alt="instagram icon"
+                />
+              </a>
             </div>
+            <div class="footer__social--icons">
+              <a href="https://facebook.com"
+                ><img
+                  class="footer__icon"
+                  src="../assets/icons/Icon-facebook.svg"
+                  alt="facebook icon"
+                />
+              </a>
+            </div>
+            <div class="footer__social-icons">
+              <a href="https://twitter.com/?lang=en"
+                ><img
+                  class="footer__icon"
+                  src="../assets/icons/Icon-twitter.svg"
+                  alt="twitter icon"
+                />
+              </a>
+            </div>
+          </div>
         </div>
         <div class="footer__management">
-            <div class="footer__locations">
-                <p class="footer__copy">The Bees Knees Management</p>
-                <p class="footer__copy">503 Broadway Penthouse,<br>New York, NY 10012, USA</p>
-                <a href="mailto:info@thebeesknees.com" class="footer__copy">info@thebeesknees.com</a>
-            </div>
-            <div class="footer__locations">
-                <p class="footer__copy">Limitless Artist Group</p>
-                <p class="footer__copy">Booking Agent for<br>US / South America / Japan</p>
-                <a href="mailto:bookings@limitlessag.com" class="footer__copy">bookings@limitlessag.com</a>
-            </div>
-            <div class="footer__locations">
-                <p class="footer__copy">ARCH Entertainment</p>
-                <p class="footer__copy">Booking Agent for<br>UK / EU / AU</p>
-                <a href="mailto:bookings@archentertainment.com" class="footer__copy">bookings@archentertainment.com</a>
-            </div>
+          <div class="footer__locations">
+            <p class="footer__copy">The Bees Knees Management</p>
+            <p class="footer__copy">
+              503 Broadway Penthouse,<br />New York, NY 10012, USA
+            </p>
+            <a href="mailto:info@thebeesknees.com" class="footer__copy"
+              >info@thebeesknees.com</a
+            >
+          </div>
+          <div class="footer__locations">
+            <p class="footer__copy">Limitless Artist Group</p>
+            <p class="footer__copy">
+              Booking Agent for<br />US / South America / Japan
+            </p>
+            <a href="mailto:bookings@limitlessag.com" class="footer__copy"
+              >bookings@limitlessag.com</a
+            >
+          </div>
+          <div class="footer__locations">
+            <p class="footer__copy">ARCH Entertainment</p>
+            <p class="footer__copy">Booking Agent for<br />UK / EU / AU</p>
+            <a href="mailto:bookings@archentertainment.com" class="footer__copy"
+              >bookings@archentertainment.com</a
+            >
+          </div>
         </div>
         <div class="footer__copyright">
-            <p class="footer__copy">Copyright The Bees Knees © 2023 All Rights Reserved</p>
+          <p class="footer__copy">
+            Copyright The Bees Knees © 2023 All Rights Reserved
+          </p>
         </div>
-    </div>
-</section>
-<script src="../scripts/build-shows-page.js"></script>
-</body>
+      </div>
+    </section>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../scripts/band-site-api-shows.js"></script>
+  </body>
 </html>
